[package]
name = "genominicus"
version = "0.1.0"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
smartstring = "1"
svarog = "0.5"
newick = "0.5"
md5 = "0.7"
rusqlite = "0.28"
clap = { version="3", features=["cargo"] }
colorsys = "0.6"
palette = "0.6"
petgraph = "0.6"
bimap = "0.6"
maplit = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
askama = "0.11"
colored = "2"
