[package]
name = "genominicus"
version = "0.1.0"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.11"
bimap = "0.6"
clap = { version="4", features=["derive"] }
colored = "2"
colorsys = "0.6"
maplit = "1"
md5 = "0.7"
newick = "0.5"
once_cell = "1"
palette = "0.6"
petgraph = "0.6"
rand = "0.8"
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1"
svarog = "0.5"
