[package]
name = "genominicus"
version = "0.1.0"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.11"
bimap = "0.6"
buche = "0.7.0"
clap = { version="4", features=["derive"] }
clap-verbosity-flag = "2.0.0"
colored = "2"
colorsys = "0.6"
flate2 = "1.0.25"
log = "0.4.17"
maplit = "1"
md5 = "0.7"
newick = "0.7"
once_cell = "1"
open = "4.1.0"
palette = "0.6"
petgraph = "0.6"
petname = "1"
rand = "0.8"
regex = "1.7.1"
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1"
svarog = "0.6"
syntesuite = "0.3"
thiserror = "1.0.38"
